# hm_product_scraper_miray_mustafov

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  urls_for_scraping_example.json  urls_for_scraping_example.txt
.run/: fallback_product_spider.run.xml  hm_scraper_debug.run.xml  product_spider.run.xml
hm_scraper/hm_scraper/: database.py  items.py  middlewares.py  pipelines.py  settings.py  utils.py
hm_scraper/hm_scraper/spiders/: chocolate_testing_spider.py  fallback_product_spider.py  product_spider.py  utils.py
hm_scraper/results/: example.json
logs/: fallback_product_spider_log.txt  product_spider_log.txt
tests/: conftest.py  test_pipelines.py  test_utils.py
tests/spiders/: test_fallback_product_spider.py  test_product_spider.py
