[project]
name = "hm_product_scraper_miray_mustafov"
version = "0.1.0"
requires-python = ">=3.13, <3.14"
dependencies = [
    "psycopg[binary]>=3.3.3",
    "python-dotenv>=1.2.2",
    "scrapy>=2.14.2",
    "scrapy-playwright>=0.0.46",
    "scrapy-user-agents>=0.1.1",
]

[dependency-groups]
dev = [
    "commitizen>=4.13.9",
    "directory-tree>=1.0.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.8",
]

# Linter > code correctness, quality, and best practices.
[tool.ruff.lint] # cleans or flags bad code patterns, unused code, complexity issues, bugs
select = ["E4", "E7", "E9", "F", "I"]

# Formatter > code looks
[tool.ruff.format] # rewrites the code to enforce code consistent look for optimal collaboration
quote-style = "double" # Like Black, use double quotes for strings
indent-style = "space" # Like Black, indent with spaces, rather than tabs
skip-magic-trailing-comma = false # Like Black, respect magic trailing commas
line-ending = "auto" # Like Black, automatically detect the appropriate line ending

# isort orders the imports by priority: 1. Builtin (os, math) > 2. Third party (scrapy) > 3. Local (hm_scraper)
[tool.ruff.lint.isort]
known-first-party = ["hm_scraper"] # Adjust based on your package name
case-sensitive = true